# TimeSeriesForecastingDemo

./: .gitignore  README.md  pyproject.toml  ts_frankfurter.ipynb
src/: data_pp.py  network.py
