[project]
name = "timeseriesforecastingdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "pytorch-forecasting>=1.3.0",
    "pytorch-lightning==2.5.1",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "tensorboardx>=2.6.2.2",
    # "torch>=2.6.0",
    "torch @ https://download.pytorch.org/whl/cu121/torch-2.2.1%2Bcu121-cp312-cp312-win_amd64.whl",
    "tqdm>=4.67.1",
]
